<resources>
    <string name="app_name">Assignment</string>
    <string name="login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="go">GO</string>
    <string name="forgot_your_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat passowrd</string>
    <string name="next">Next</string>
    <string name="welcome_string">Welcome to\n<b>HRC Karaoke Nights</b>\nWith Artistivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="make_a_toolbar">Make a toolbar</string>
    <string name="make_a_request">Make a request</string>
    <string name="my_profile">My Profile</string>
    <string name="prev_requests">Previous request</string>
    <string name="hrc_karakoe_guide">HRC Karakoe guide</string>
    <string name="other_events">Other Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_fagment">popular fragment</string>
    <string name="song_warning">Please be patient while your request is selected. You will be notified a song prior.\n\nIf you want  to change the  request,  cancel current and make a new one</string>

</resources>
